[SCA-2026] XACML refactoging ready, to be improved